third_party/rust/chromium_crates_io/vendor/erased-serde-v0_4/tests/ui/missing-supertrait.rs
use erased_serde::serialize_trait_object;

pub trait MyTrait {}

serialize_trait_object!(MyTrait);

fn main() {}
